[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/FolderPath.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GameStart.gd" type="Script" id=2]

[node name="Main Menu" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 159.0
margin_top = 374.0
margin_right = 327.0
margin_bottom = 405.0
rect_scale = Vector2( 4.48, 4.48 )
text = "Drag the folder with the
the levels onto the screen"

[node name="FolderPath" parent="." instance=ExtResource( 1 )]

[node name="Button" type="Button" parent="."]
margin_left = 407.0
margin_top = 50.0
margin_right = 664.0
margin_bottom = 121.0
text = "Enter Level Editor"

[node name="LoadLevel" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="LoadLevel" to="." method="_on_LoadLevel_pressed"]
